--- a/app/server/package.json
+++ b/app/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nedb": "^1.8.0"
+    "md5": "^2.2.1",
+    "nedb": "^1.8.0",
+    "uuid": "^3.3.3"
   }
 }
