--- a/app/client/package.json
+++ b/app/client/package.json
@@ -14,6 +14,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-svg": "^9.11.1",
     "react-navigation": "^4.0.9",
+    "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.0"
   },
   "devDependencies": {
