--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-svg": "^9.11.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.9",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.0"
