--- a/app/client/package.json
+++ b/app/client/package.json
@@ -12,11 +12,15 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^9.11.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.9",
+    "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
-    "react-navigation-stack": "^1.9.0"
+    "react-navigation-stack": "^1.9.0",
+    "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
