--- a/app/client/android/app/build.gradle
+++ b/app/client/android/app/build.gradle
@@ -193,6 +193,9 @@ android {
 }
 
 dependencies {
+    // Added two lines below
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
