--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@unimodules/core": "^4.0.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-side-drawer": "^1.2.5",
     "react-native-svg": "^9.11.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
