--- a/app/client/package.json
+++ b/app/client/package.json
@@ -12,6 +12,7 @@
     "@unimodules/core": "^4.0.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
