--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,32 +9,27 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
-    "@unimodules/core": "^4.0.0",
-    "react": "16.8.6",
+    "react": "^16.11.0",
     "react-native": "0.60.5",
-    "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-side-drawer": "^1.2.5",
     "react-native-svg": "^9.11.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.2.2",
-    "react-navigation-stack": "^1.9.0",
-    "react-navigation-tabs": "^2.5.6",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "react-navigation-drawer": "^2.3.3",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
-    "@babel/core": "7.6.0",
-    "@babel/runtime": "7.6.0",
+    "@babel/core": "^7.7.2",
+    "@babel/runtime": "^7.7.2",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.9.0",
-    "eslint": "6.4.0",
+    "eslint": "^6.6.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.54.1",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "^16.11.0"
   },
   "jest": {
     "preset": "react-native"
