--- a/app/client/package.json
+++ b/app/client/package.json
@@ -12,9 +12,11 @@
     "react": "^16.11.0",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "^9.11.1",
+    "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
