--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/cli-platform-android": "^2.9.0",
     "react": "^16.11.0",
     "react-native": "0.60.5",
+    "react-native-color-picker": "^0.4.2",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
