--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/cli-platform-android": "^2.9.0",
+    "@react-native-community/slider": "^2.0.3",
     "react": "^16.11.0",
     "react-native": "0.60.5",
-    "react-native-color-picker": "^0.4.2",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
@@ -23,7 +23,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
