--- a/app/client/package.json
+++ b/app/client/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "^1.5.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "^9.11.1",
     "react-native-user-avatar": "^1.0.4",
