some test stuff and pulling questions

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -37,6 +37,7 @@
     "react-test-renderer": "^16.11.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": ["./__tests__/jestSetupFile.js"]
   }
 }
