--- a/app/client/package.json
+++ b/app/client/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/cli-platform-android": "^2.9.0",
     "@react-native-community/slider": "^2.0.3",
+    "mock-async-storage": "^2.2.0",
     "react": "^16.11.0",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.5.0",
