--- a/app/client/package.json
+++ b/app/client/package.json
@@ -14,6 +14,7 @@
     "mock-async-storage": "^2.2.0",
     "react": "^16.11.0",
     "react-native": "0.60.5",
+    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
