--- a/app/client/package.json
+++ b/app/client/package.json
@@ -23,6 +23,7 @@
     "react-native-svg": "^9.11.1",
     "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.5.2",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
